infrastructure/cdk.out/AiuiVpc-dev.template.json
{
  "Resources": {
    "AiuiVpc2894FA22": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "aiui-vpc-dev"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "AiuiVpc-dev/AiuiVpc/Resource"
      }
    },
    "AiuiVpcPublicSubnet1Subnet93AB50D0": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": "us-west-1a",
        "CidrBlock": "10.0.0.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "AiuiVpc-dev/AiuiVpc/PublicSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "AiuiVpc2894FA22"
        }
      },
      "Metadata": {
        "aws:cdk:path": "AiuiVpc-dev/AiuiVpc/PublicSubnet1/Subnet"
      }
    },
    "AiuiVpcPublicSubnet1RouteTable27BFB672": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "AiuiVpc-dev/AiuiVpc/PublicSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "AiuiVpc2894FA22"
        }
      },
      "Metadata": {
        "aws:cdk:path": "AiuiVpc-dev/AiuiVpc/PublicSubnet1/RouteTable"
      }
    },
    "AiuiVpcPublicSubnet1RouteTableAssociation97E5FA33": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "AiuiVpcPublicSubnet1RouteTable27BFB672"
        },
        "SubnetId": {
          "Ref": "AiuiVpcPublicSubnet1Subnet93AB50D0"
        }
      },
      "Metadata": {
        "aws:cdk:path": "AiuiVpc-dev/AiuiVpc/PublicSubnet1/RouteTableAssociation"
      }
    },
    "AiuiVpcPublicSubnet1DefaultRoute47D93240": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "AiuiVpcIGW1304410A"
        },
        "RouteTableId": {
          "Ref": "AiuiVpcPublicSubnet1RouteTable27BFB672"
        }
      },
      "DependsOn": ["AiuiVpcVPCGW0A7C32B9"],
      "Metadata": {
        "aws:cdk:path": "AiuiVpc-dev/AiuiVpc/PublicSubnet1/DefaultRoute"
      }
    },
    "AiuiVpcPublicSubnet2Subnet0FCDC7AF": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": "us-west-1c",
        "CidrBlock": "10.0.1.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "AiuiVpc-dev/AiuiVpc/PublicSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "AiuiVpc2894FA22"
        }
      },
      "Metadata": {
        "aws:cdk:path": "AiuiVpc-dev/AiuiVpc/PublicSubnet2/Subnet"
      }
    },
    "AiuiVpcPublicSubnet2RouteTable716B5FE1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "AiuiVpc-dev/AiuiVpc/PublicSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "AiuiVpc2894FA22"
        }
      },
      "Metadata": {
        "aws:cdk:path": "AiuiVpc-dev/AiuiVpc/PublicSubnet2/RouteTable"
      }
    },
    "AiuiVpcPublicSubnet2RouteTableAssociation5757DF7E": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "AiuiVpcPublicSubnet2RouteTable716B5FE1"
        },
        "SubnetId": {
          "Ref": "AiuiVpcPublicSubnet2Subnet0FCDC7AF"
        }
      },
      "Metadata": {
        "aws:cdk:path": "AiuiVpc-dev/AiuiVpc/PublicSubnet2/RouteTableAssociation"
      }
    },
    "AiuiVpcPublicSubnet2DefaultRoute024006C0": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "AiuiVpcIGW1304410A"
        },
        "RouteTableId": {
          "Ref": "AiuiVpcPublicSubnet2RouteTable716B5FE1"
        }
      },
      "DependsOn": ["AiuiVpcVPCGW0A7C32B9"],
      "Metadata": {
        "aws:cdk:path": "AiuiVpc-dev/AiuiVpc/PublicSubnet2/DefaultRoute"
      }
    },
    "AiuiVpcPrivateSubnet1Subnet1405825E": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": "us-west-1a",
        "CidrBlock": "10.0.2.0/24",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "AiuiVpc-dev/AiuiVpc/PrivateSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "AiuiVpc2894FA22"
        }
      },
      "Metadata": {
        "aws:cdk:path": "AiuiVpc-dev/AiuiVpc/PrivateSubnet1/Subnet"
      }
    },
    "AiuiVpcPrivateSubnet1RouteTableF395C46F": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "AiuiVpc-dev/AiuiVpc/PrivateSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "AiuiVpc2894FA22"
        }
      },
      "Metadata": {
        "aws:cdk:path": "AiuiVpc-dev/AiuiVpc/PrivateSubnet1/RouteTable"
      }
    },
    "AiuiVpcPrivateSubnet1RouteTableAssociationE973190E": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "AiuiVpcPrivateSubnet1RouteTableF395C46F"
        },
        "SubnetId": {
          "Ref": "AiuiVpcPrivateSubnet1Subnet1405825E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "AiuiVpc-dev/AiuiVpc/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "AiuiVpcPrivateSubnet2SubnetCB723B06": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": "us-west-1c",
        "CidrBlock": "10.0.3.0/24",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "AiuiVpc-dev/AiuiVpc/PrivateSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "AiuiVpc2894FA22"
        }
      },
      "Metadata": {
        "aws:cdk:path": "AiuiVpc-dev/AiuiVpc/PrivateSubnet2/Subnet"
      }
    },
    "AiuiVpcPrivateSubnet2RouteTable7AE07A03": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "AiuiVpc-dev/AiuiVpc/PrivateSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "AiuiVpc2894FA22"
        }
      },
      "Metadata": {
        "aws:cdk:path": "AiuiVpc-dev/AiuiVpc/PrivateSubnet2/RouteTable"
      }
    },
    "AiuiVpcPrivateSubnet2RouteTableAssociation78CBC5AD": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "AiuiVpcPrivateSubnet2RouteTable7AE07A03"
        },
        "SubnetId": {
          "Ref": "AiuiVpcPrivateSubnet2SubnetCB723B06"
        }
      },
      "Metadata": {
        "aws:cdk:path": "AiuiVpc-dev/AiuiVpc/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "AiuiVpcIGW1304410A": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "aiui-vpc-dev"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "AiuiVpc-dev/AiuiVpc/IGW"
      }
    },
    "AiuiVpcVPCGW0A7C32B9": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": {
          "Ref": "AiuiVpcIGW1304410A"
        },
        "VpcId": {
          "Ref": "AiuiVpc2894FA22"
        }
      },
      "Metadata": {
        "aws:cdk:path": "AiuiVpc-dev/AiuiVpc/VPCGW"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WNzQrCMBCEn8V7GmtQwWPpQTxZWulVNumK6U9Skk2LlL67qMWeZuZjmBFc7I883sDoI1U1UaslnwoC1TAY/R2V4FPZK5Y+TJmlLAuy1aoI0iB92OpyGwhvIFtc+coS763SQNqaf5llTg9AuG5cDKEzSGcgHOG1nC4pIQL17NDQzHL0Njj1vboG6gPNzNgKee23g4j57sQPm9prHblgSHfI85++AXP2NQjvAAAA"
      },
      "Metadata": {
        "aws:cdk:path": "AiuiVpc-dev/CDKMetadata/Default"
      }
    }
  },
  "Outputs": {
    "VpcId": {
      "Value": {
        "Ref": "AiuiVpc2894FA22"
      }
    },
    "ExportsOutputFnGetAttAiuiVpc2894FA22CidrBlock3DE65687": {
      "Value": {
        "Fn::GetAtt": ["AiuiVpc2894FA22", "CidrBlock"]
      },
      "Export": {
        "Name": "AiuiVpc-dev:ExportsOutputFnGetAttAiuiVpc2894FA22CidrBlock3DE65687"
      }
    },
    "ExportsOutputRefAiuiVpc2894FA22F4255A9B": {
      "Value": {
        "Ref": "AiuiVpc2894FA22"
      },
      "Export": {
        "Name": "AiuiVpc-dev:ExportsOutputRefAiuiVpc2894FA22F4255A9B"
      }
    },
    "ExportsOutputRefAiuiVpcPrivateSubnet1Subnet1405825EB93543AB": {
      "Value": {
        "Ref": "AiuiVpcPrivateSubnet1Subnet1405825E"
      },
      "Export": {
        "Name": "AiuiVpc-dev:ExportsOutputRefAiuiVpcPrivateSubnet1Subnet1405825EB93543AB"
      }
    },
    "ExportsOutputRefAiuiVpcPrivateSubnet2SubnetCB723B06962BD40D": {
      "Value": {
        "Ref": "AiuiVpcPrivateSubnet2SubnetCB723B06"
      },
      "Export": {
        "Name": "AiuiVpc-dev:ExportsOutputRefAiuiVpcPrivateSubnet2SubnetCB723B06962BD40D"
      }
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  ["1", "2", "3", "4", "5"],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
